clusters/cl01tl/manifests/authentik/HTTPRoute-http-route-authentik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-authentik
  namespace: authentik
  labels:
    app.kubernetes.io/name: http-route-authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/part-of: authentik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - authentik.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: authentik-server
          port: 80
          weight: 100
